welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: ')' expected but 'if' found.
	if ( (speed <= 80) && (61 <= speed)) {
        ^caughtSpeeding:11: error: ';' expected but 'if' found.
	if ( (81 <= speed)) {
        ^